# judgekit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: quickstart.py
src/judgekit/: __init__.py  adapters.py  base.py  bias.py  calibration.py  evaluate.py  llm_judge.py  stats.py  types.py
tests/: test_bias.py  test_calibration.py  test_evaluate.py  test_import.py  test_llm_judge.py  test_report.py  test_stats.py  test_temperature.py  test_types.py
