[project]
name = "judgekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "umairrasheed828", email = "umairrasheed828@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
