[project]
name = "judgekit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "umairrasheed828", email = "umairrasheed828@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.16",
]

[project.optional-dependencies]
llm = ["openai>=1.40"]

[[tool.mypy.overrides]]
module = ["openai.*"]
ignore_missing_imports = true
